--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,8 @@
     <string name="tabClosedUndo">Undo</string>
     <string name="downloadsMenuItemTitle">Downloads</string>
     <string name="tabSwitcherFeatureAnnouncement">You can now drag and drop your tabs to reorder them!</string>
+    <string name="tabSwitcherListViewMenu">List view</string>
+    <string name="tabSwitcherGridViewMenu">Grid view</string>
 
     <!-- Fire -->
     <string name="fireMenu">Clear Data</string>
