Translate strings to values-bg

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Отмяна</string>
     <string name="downloadsMenuItemTitle">Изтеглени файлове</string>
     <string name="tabSwitcherFeatureAnnouncement">Вече можете да плъзгате и пускате разделите, за да ги пренаредите!</string>
+    <string name="tabSwitcherListViewMenu">Изглед в списък</string>
+    <string name="tabSwitcherGridViewMenu">Изглед в решетка</string>
 
     <!-- Fire -->
     <string name="fireMenu">Изчистване на данни</string>
