Translate strings to values-de

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Rückgängig machen</string>
     <string name="downloadsMenuItemTitle">Downloads</string>
     <string name="tabSwitcherFeatureAnnouncement">Du kannst deine Tabs jetzt per Drag-and-Drop verschieben, um sie neu anzuordnen!</string>
+    <string name="tabSwitcherListViewMenu">Listenansicht</string>
+    <string name="tabSwitcherGridViewMenu">Gitteransicht</string>
 
     <!-- Fire -->
     <string name="fireMenu">Daten löschen</string>
