Translate strings to values-lv

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Atsaukt</string>
     <string name="downloadsMenuItemTitle">Lejupielādes</string>
     <string name="tabSwitcherFeatureAnnouncement">Tagad vari vilkt un nomest cilnes, lai tās pārkārtotu!</string>
+    <string name="tabSwitcherListViewMenu">Saraksta skats</string>
+    <string name="tabSwitcherGridViewMenu">Režģa skats</string>
 
     <!-- Fire -->
     <string name="fireMenu">Notīrīt datus</string>
