--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Visszavonás</string>
     <string name="downloadsMenuItemTitle">Letöltések</string>
     <string name="tabSwitcherFeatureAnnouncement">Mostantól átrendezheted a lapok sorrendjét a fogd és vidd funkcióval!</string>
+    <string name="tabSwitcherListViewMenu">Listanézet</string>
+    <string name="tabSwitcherGridViewMenu">Rácsnézet</string>
 
     <!-- Fire -->
     <string name="fireMenu">Adatok törlése</string>
