Translate strings to values-et

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Võta tagasi</string>
     <string name="downloadsMenuItemTitle">Allalaadimised</string>
     <string name="tabSwitcherFeatureAnnouncement">Nüüd saad oma vahekaarte lohistades ümber järjestada!</string>
+    <string name="tabSwitcherListViewMenu">Loendivaade</string>
+    <string name="tabSwitcherGridViewMenu">Võrgustikuvaade</string>
 
     <!-- Fire -->
     <string name="fireMenu">Kustuta andmed</string>
