Translate strings to values-sv

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Återställ</string>
     <string name="downloadsMenuItemTitle">Nerladdningar</string>
     <string name="tabSwitcherFeatureAnnouncement">Du kan nu dra och släppa dina flikar för att ordna om dem!</string>
+    <string name="tabSwitcherListViewMenu">Listvy</string>
+    <string name="tabSwitcherGridViewMenu">Rutnätsvy</string>
 
     <!-- Fire -->
     <string name="fireMenu">Rensa data</string>
