Translate strings to values-ru

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Отменить</string>
     <string name="downloadsMenuItemTitle">Загрузки</string>
     <string name="tabSwitcherFeatureAnnouncement">Теперь порядок вкладок можно менять путем перетаскивания.</string>
+    <string name="tabSwitcherListViewMenu">В виде списка</string>
+    <string name="tabSwitcherGridViewMenu">В виде сетки</string>
 
     <!-- Fire -->
     <string name="fireMenu">Сбросить данные</string>
