Translate strings to values-nb

--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -109,6 +109,8 @@
     <string name="tabClosedUndo">Angre</string>
     <string name="downloadsMenuItemTitle">Nedlastinger</string>
     <string name="tabSwitcherFeatureAnnouncement">Du kan nå dra og slippe fanene for å omorganisere dem!</string>
+    <string name="tabSwitcherListViewMenu">Listevisning</string>
+    <string name="tabSwitcherGridViewMenu">Rutenettvisning</string>
 
     <!-- Fire -->
     <string name="fireMenu">Slett data</string>
